--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "main": "index.js",
   "dependencies": {
     "discord.js": "^11.2.1",
+    "fs": "0.0.1-security",
     "init": "^0.1.2",
-    "quick.db": "^3.0.3"
+    "moment": "^2.19.4",
+    "moment-duration-format": "^1.3.0",
+    "ms": "^2.1.1",
+    "quick.db": "^3.0.3",
+    "superagent": "^3.8.2"
   },
   "devDependencies": {},
   "scripts": {
